--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-db.sqlite3
-flashfacts/app/__pycache__
-flashfacts/app/migrations/__pycache__
-flashfacts/flashfacts/__pycache__
-flashfacts/public
-flashfacts/venv
+app/__pycache__
+app/migrations/__pycache__
+flashfacts/__pycache__
+public
+venv
